[package]
name = "iv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
clap = { version = "4.5.9", features = ["derive"] }
maud = "0.26.0"
opener = "0.7.1"
log = "0.4.21"
chrono = "0.4.38"
fern = { version = "0.6.2", features = ["colored"] }
actix-files = "0.6.6"
lazy_static = "1.5.0"
mime = "0.3.17"
sqlx = { version = "0.8.0", features = ["sqlite"] }
urlencoding = "2.1.3"
